k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: flaskapp
spec:
  containers:
    - name: flaskapp
      image: fidemin/flaskapp:0.3
      ports:
        - containerPort: 8000
      resources:
        requests:
          cpu: "200m"
          memory: "500Mi"
        limits:
          cpu: "200m"
          memory: "500Mi"
    - name: flaskapp-nginx
      image: fidemin/nginx:0.1
      ports:
        - containerPort: 80
