k8s/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaskapp-lb
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  selector:
    app: flaskapp
